--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -12,7 +12,7 @@
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 		
-		<div class="card mt-3 border border-1 shadow">
+		<div class="card mt-3 border border-1">
 			<h4 class="card-header text-center">Gerenciar Questões</h4>
 			<div class="card-body">
 				<table id="table" class="table table-sm cell-border compact order-column table-hover compact stripe">
