--- a/src/main/resources/templates/admin/topics.html
+++ b/src/main/resources/templates/admin/topics.html
@@ -13,7 +13,7 @@
 		</div>
 	
 
-	<div class="card mt-3 border border-1 shadow">
+	<div class="card mt-3 border border-1">
 		<div class="card-body">
 			<h4 class="card-title text-center fw-bolder">Gerenciar Tópicos</h4>
 			<hr>
