--- a/src/main/resources/templates/subjects/test.html
+++ b/src/main/resources/templates/subjects/test.html
@@ -11,7 +11,7 @@
 			<div class="card-body text-center">
 				<h4 class="card-title">Resultado do Teste</h4>
 
-				<h2 id="ponctuation" class="text-success fw-bolder">3/3</h2>
+				<h1 id="ponctuation" class="text-success fw-bolder">3/3</h1>
 
 				<p class="h5">
 					<span>Tempo gasto = </span><b id="elapsedTime">10:56</b>
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="card mt-3 shadow">
-			<h4 class="card-header text-center" th:text="${test.name}">Name</h4>
+			<h4 class="card-header text-center fw-bolder" th:text="${test.name}">Name</h4>
 			<div class="timer-container d-flex justify-content-end align-items-baseline me-3">
 				<i class="bi bi-alarm-fill text-primary" style="font-size: 1.5rem;"></i>
 				<h4 class="timer fw-bold ms-1"></h4>
