--- a/src/main/resources/templates/users/question-edit.html
+++ b/src/main/resources/templates/users/question-edit.html
@@ -36,7 +36,7 @@
 						<input type="hidden" th:field="*{description}">
 					</div>
 
-					<div id="alternativesContainer" class="mb-4 p-3 border border-1 border-secondary rounded">
+					<div id="alternativesContainer" class="mb-4 rounded">
 						<label class="h5 form-label fw-bolder ms-5">Alternativas</label>
 
 						<div id="alternatives">
@@ -64,7 +64,7 @@
 
 						<hr>
 
-						<div class="d-grid gap-2 col-6 mx-auto">
+						<div class="d-flex justify-content-end">
 							<button type="button" id="addAlternative" class="btn btn-secondary">
 								Adicionar alternativa <i class="fa fa-plus" aria-hidden="true"></i>
 							</button>
@@ -111,7 +111,7 @@
 
 					<br>
 
-					<div class="mb-3">
+					<div class="mb-4">
 						<span class="fw-bold h5">Outras Informações</span>
 
 						<div class="row">
@@ -149,7 +149,7 @@
 					</div>
 
 					<div class="d-grid gap-2 col-6 mx-auto">
-						<button type="submit" class="btn btn-danger form-control">
+						<button type="submit" class="btn btn-danger">
 							Atualizar <i class="fa fa-pencil ms-3" aria-hidden="true"></i>
 						</button>
 					</div>
