--- a/src/main/resources/templates/users/ranking.html
+++ b/src/main/resources/templates/users/ranking.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<div class="container mt-4">	
-		<div class="card shadow">
+		<div class="card">
 			<div class="card-body">
-				<h4 class="card-title text-center fw-bolder">Ranking</h4>
+				<h4 class="card-title text-center fw-bolder">Ranking Geral</h4>
 				<table id="rankingTable" class="table table-bordered table-stripped">
 					<thead>
 						<tr>
