--- a/src/main/resources/templates/users/edit-profile.html
+++ b/src/main/resources/templates/users/edit-profile.html
@@ -11,7 +11,7 @@
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 
-		<div class="card mt-3 border border-1 border-danger shadow">
+		<div class="card mt-3">
 			<div class="card-body">
 				<h2 class="card-title text-center fw-bolder">Editar Perfil</h2>
 
