--- a/src/main/resources/templates/users/my-annotations.html
+++ b/src/main/resources/templates/users/my-annotations.html
@@ -19,7 +19,7 @@
 	<div class="container mt-4">
 		<div class="row">
 			<div class="col-md-4 my-3">
-				<div class="card shadow">
+				<div class="card">
 					<div class="card-body">
 						<h4 class="card-title text-center fw-bolder mb-4">Minhas anotações ([[${#lists.size(topics)}]])</h4>
 
@@ -48,7 +48,7 @@
 			<div class="col-md-8">
 				<h4 id="subjectName" class="fw-bold text-center mt-2">-</h4>
 
-				<div class="card shadow">
+				<div class="card">
 					<div class="card-body">
 						<input type="hidden" id="topic">
 
