--- a/src/main/resources/templates/users/my-topics.html
+++ b/src/main/resources/templates/users/my-topics.html
@@ -12,7 +12,7 @@
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 
-		<div class="card mt-3 border border-1 shadow">
+		<div class="card mt-3">
 			<div class="card-body">
 				<h3 class="card-title text-center fw-bolder">Meus Tópicos</h3>
 				<hr>
