--- a/src/main/resources/templates/users/rewards.html
+++ b/src/main/resources/templates/users/rewards.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="container mt-4">
-		<div class="card shadow">
+		<div class="card">
 			<h4 class="card-header fw-bold text-center">Recompensas</h4>
 			<div class="card-body">
 				<table class="table table-sm table-bordered table-stripped text-center">
