fix responsive home and login screen layout

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,8 +33,8 @@
 
 					<div class="carousel-item active bg-secondary">
 						<div class="row text-center">
-							<div class="col-6 align-self-center">
-								<div style="color: white">
+							<div class="col-12 col-sm-6 align-self-center p-4">
+								<div class="text-white">
 									<h2>Sem complicação</h2>
 									<p>Estude como e quando quiser!</p>
 									<button class="btn btn-danger" th:onclick="access()">Acessar</button>
@@ -42,15 +42,15 @@
 							</div>
 
 							<div class="col-6">
-								<img alt="" th:src="@{/images/study.svg}" class="img-fluid">
+								<img alt="" th:src="@{/images/study.svg}" class="img-fluid d-none d-sm-block">
 							</div>
 						</div>
 					</div>
 
 					<div class="carousel-item bg-danger">
 						<div class="row text-center">
-							<div class="col-6 align-self-center">
-								<div style="color: white">
+							<div class="col-12 col-sm-6 align-self-center p-4">
+								<div class="text-white">
 									<h2>É fazendo que se aprende</h2>
 									<p>Metodologia focada na prática com exercícios e simulados.</p>
 									<button class="btn btn-dark" th:onclick="access()">Acessar</button>
@@ -58,15 +58,15 @@
 							</div>
 
 							<div class="col-6">
-								<img th:src="@{/images/focus.svg}" class="img-fluid">
+								<img th:src="@{/images/focus.svg}" class="img-fluid d-none d-sm-block">
 							</div>
 						</div>
 					</div>
 
 					<div class="carousel-item bg-warning">
 						<div class="row text-center">
-							<div class="col-6 align-self-center">
-								<div style="color: white">
+							<div class="col-12 col-sm-6 align-self-center p-4">
+								<div class="text-white">
 									<h2>O Material Certo</h2>
 									<p>Material sempre atualizado pela Comunidade do Fatecando.</p>
 									<button class="btn btn-danger" th:onclick="access()">Acessar</button>
@@ -74,15 +74,15 @@
 							</div>
 
 							<div class="col-6">
-								<img th:src="@{/images/material.svg}" class="img-fluid">
+								<img th:src="@{/images/material.svg}" class="img-fluid d-none d-sm-block">
 							</div>
 						</div>
 					</div>
 
 					<div class="carousel-item bg-success">
 						<div class="row text-center">
-							<div class="col-6 align-self-center">
-								<div style="color: white">
+							<div class="col-12 col-sm-6 align-self-center p-4">
+								<div class="text-white">
 									<h2>Mais que juntos</h2>
 									<p>Estude com alunos que estão no mesmo barco que você.</p>
 									<button class="btn btn-dark" th:onclick="access()">Acessar</button>
@@ -90,15 +90,15 @@
 							</div>
 
 							<div class="col-6">
-								<img th:src="@{/images/group.svg}" class="img-fluid">
+								<img th:src="@{/images/group.svg}" class="img-fluid d-none d-sm-block">
 							</div>
 						</div>
 					</div>
 
 					<div class="carousel-item bg-primary">
 						<div class="row text-center">
-							<div class="col-6 align-self-center">
-								<div style="color: white">
+							<div class="col-12 col-sm-6 align-self-center p-4">
+								<div class="text-white">
 									<h2>Comece agora</h2>
 									<p>Siga o cronograma e chegue lá!</p>
 									<button class="btn btn-danger" th:onclick="access()">Acessar</button>
@@ -107,7 +107,7 @@
 
 							<div class="col-6">
 								<img alt="" src="../static/images/check.svg" th:src="@{/images/check.svg}"
-									class="img-fluid">
+									class="img-fluid d-none d-sm-block">
 							</div>
 						</div>
 					</div>
